k8s/fallback-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fallback-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fallback-base
  template:
    metadata:
      labels:
        app: fallback-base
    spec:
      containers:
        - name: fallback-base
          image: ararslanova/fallback_base:latest
          resources:
            limits:
              memory: "3.5Gi"
              cpu: "2"
