k8s/main-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-base
  template:
    metadata:
      labels:
        app: main-base
    spec:
      containers:
        - name: main-base
          image: ararslanova/main_base:latest
          resources:
            limits:
              memory: "4.5Gi"
              cpu: "2"
