k8s/fallback-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fallback-service
spec:
  selector:
    app: fallback-base
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
