k8s/main-service.yml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main-base
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
